- added draw buffer
  - set draw target using set_drawing_buffer(ON_SCREEN || OFF_SCREEN)
  - push to screen using copy_off_screen_buffer_to_screen()
- moved FontCache to its own file fontcache
- moved t_x11_state and t_gl_state to their own file graphics_state